--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 92,
    "id": "8be53c52",
    "metadata": {},
    "outputs": [],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 93,
    "id": "02505b86",
    "metadata": {},
    "outputs": [],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 94,
    "id": "46b10678",
    "metadata": {},
    "outputs": [],
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 95,
    "id": "5625b32e",
    "metadata": {},
    "outputs": [],
@@ -429,18 +429,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "a8ddc145",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = pipeline.fit(train_df)"
    ]
@@ -455,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "e6ca62bb",
    "metadata": {},
    "outputs": [],
@@ -465,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "c0f922a0",
    "metadata": {},
    "outputs": [
@@ -507,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "0dc6c55a",
    "metadata": {},
    "outputs": [
@@ -555,6 +547,26 @@
     "prediction_correctness.select(\n",
     "    \"diagnosis\", \"label\", \"prediction\", \"probability\", \"correctness\"\n",
     ").show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b7b6a5f",
+   "metadata": {},
+   "source": [
+    "### Evaluate the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1eaef33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluator = MulticlassClassificationEvaluator(labelCol=\"label\", predictionCol=\"prediction\", metricName=\"accuracy\")\n",
+    "accuracy = evaluator.evaluate(predictions)\n",
+    "print(f\"Test Accuracy: {accuracy:.4f}\")\n"
    ]
   }
  ],
