compare Models' accuracy

--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 101,
    "id": "8be53c52",
    "metadata": {},
    "outputs": [],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 102,
    "id": "02505b86",
    "metadata": {},
    "outputs": [],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 103,
    "id": "46b10678",
    "metadata": {},
    "outputs": [],
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 104,
    "id": "5625b32e",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "a8ddc145",
    "metadata": {},
    "outputs": [],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "e6ca62bb",
    "metadata": {},
    "outputs": [],
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "c0f922a0",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "0dc6c55a",
    "metadata": {},
    "outputs": [
@@ -559,14 +559,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "id": "f1eaef33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.9302\n"
+     ]
+    }
+   ],
    "source": [
     "evaluator = MulticlassClassificationEvaluator(labelCol=\"label\", predictionCol=\"prediction\", metricName=\"accuracy\")\n",
     "accuracy = evaluator.evaluate(predictions)\n",
     "print(f\"Test Accuracy: {accuracy:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bab8c5c3",
+   "metadata": {},
+   "source": [
+    "### precision,recall and f1-score for Logistic Regression model\n",
+    "### Precision → Of all the predicted positive cases (malignant), how many were actually malignant.\n",
+    "\n",
+    "### Recall → Of all the actual malignant cases, how many did we correctly predict.\n",
+    "\n",
+    "### F1 Score → Balance between precision and recall."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "b99c6162",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 0.9400\n",
+      "Recall: 0.9400\n",
+      "F1 Score: 0.9302\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Precision\n",
+    "precision_evaluator = MulticlassClassificationEvaluator(\n",
+    "    labelCol=\"label\", predictionCol=\"prediction\", metricName=\"precisionByLabel\"\n",
+    ")\n",
+    "precision = precision_evaluator.evaluate(predictions)\n",
+    "\n",
+    "# Recall\n",
+    "recall_evaluator = MulticlassClassificationEvaluator(\n",
+    "    labelCol=\"label\", predictionCol=\"prediction\", metricName=\"recallByLabel\"\n",
+    ")\n",
+    "recall = recall_evaluator.evaluate(predictions)\n",
+    "\n",
+    "# F1 Score\n",
+    "f1_evaluator = MulticlassClassificationEvaluator(\n",
+    "    labelCol=\"label\", predictionCol=\"prediction\", metricName=\"f1\"\n",
+    ")\n",
+    "f1_score = f1_evaluator.evaluate(predictions)\n",
+    "\n",
+    "\n",
+    "print(f\"Precision: {precision:.4f}\")\n",
+    "print(f\"Recall: {recall:.4f}\")\n",
+    "print(f\"F1 Score: {f1_score:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d38c45a1",
+   "metadata": {},
+   "source": [
+    "### Comparing Classification Models in PySpark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "87060e5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression Accuracy: 0.9302\n",
+      "Random Forest Accuracy: 0.9419\n",
+      "Decision Tree Accuracy: 0.8953\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Models to compare\n",
+    "models = [\n",
+    "    (\"Logistic Regression\", LogisticRegression(featuresCol=\"features\", labelCol=\"label\")),\n",
+    "    (\"Random Forest\", RandomForestClassifier(featuresCol=\"features\", labelCol=\"label\", numTrees=50)),\n",
+    "    (\"Decision Tree\", DecisionTreeClassifier(featuresCol=\"features\", labelCol=\"label\", maxDepth=10))\n",
+    "]\n",
+    "\n",
+    "# Evaluator\n",
+    "evaluator = MulticlassClassificationEvaluator(labelCol=\"label\", predictionCol=\"prediction\", metricName=\"accuracy\")\n",
+    "\n",
+    "# Run each model and print accuracy\n",
+    "for name, classifier in models:\n",
+    "    pipeline = Pipeline(stages=[label_indexer, assembler, classifier])\n",
+    "    model = pipeline.fit(train_df)\n",
+    "    predictions = model.transform(test_df)\n",
+    "    accuracy = evaluator.evaluate(predictions)\n",
+    "    print(f\"{name} Accuracy: {accuracy:.4f}\")"
    ]
   }
  ],
