save best model

--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -636,12 +636,12 @@
    "id": "d38c45a1",
    "metadata": {},
    "source": [
-    "### Comparing Classification Models in PySpark"
+    "### Comparing Classification Models in PySpark and save the best model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "id": "87060e5d",
    "metadata": {},
    "outputs": [
@@ -666,13 +666,33 @@
     "# Evaluator\n",
     "evaluator = MulticlassClassificationEvaluator(labelCol=\"label\", predictionCol=\"prediction\", metricName=\"accuracy\")\n",
     "\n",
+    "# best model \n",
+    "best_accuracy = 0\n",
+    "best_model = None\n",
+    "best_name = \"\"\n",
+    "\n",
+    "\n",
     "# Run each model and print accuracy\n",
     "for name, classifier in models:\n",
     "    pipeline = Pipeline(stages=[label_indexer, assembler, classifier])\n",
     "    model = pipeline.fit(train_df)\n",
     "    predictions = model.transform(test_df)\n",
     "    accuracy = evaluator.evaluate(predictions)\n",
-    "    print(f\"{name} Accuracy: {accuracy:.4f}\")"
+    "    print(f\"{name} Accuracy: {accuracy:.4f}\")\n",
+    "\n",
+    "    # logic to check best model\n",
+    "    if accuracy > best_accuracy:\n",
+    "        best_accuracy = accuracy\n",
+    "        best_model = model\n",
+    "        best_name = name\n",
+    "    \n",
+    "# Save the best model to disk\n",
+    "model_path = f\"models/{best_name.replace(' ', '_')}_model\"\n",
+    "best_model.write().overwrite().save(model_path)\n",
+    "\n",
+    "\n",
+    "print(f\"Best model: {best_name} with accuracy {best_accuracy:.4f}\")\n",
+    "print(f\"Model saved at: {model_path}\")"
    ]
   }
  ],
