save model code refactor

--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 123,
    "id": "48837796",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 124,
    "id": "b60b26d1",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 125,
    "id": "cc2d5a6c",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 126,
    "id": "9216c403",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 127,
    "id": "ef892da1",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 128,
    "id": "2dc8a86b",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 129,
    "id": "5da2a261",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 59:>                                                         (0 + 1) / 1]\r"
+      "                                                                                \r"
      ]
     },
     {
@@ -247,13 +247,6 @@
       "+-------+--------------------+---------+------------------+-----------------+-----------------+-----------------+--------------------+-------------------+-------------------+--------------------+--------------------+----------------------+------------------+------------------+------------------+-----------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+------------------+------------------+------------------+-----------------+--------------------+-------------------+-------------------+--------------------+-------------------+-----------------------+\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
     }
    ],
    "source": [
@@ -270,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 130,
    "id": "9ad8bb34",
    "metadata": {},
    "outputs": [
@@ -312,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 131,
    "id": "20e9856e",
    "metadata": {},
    "outputs": [],
@@ -337,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 132,
    "id": "5e8b019f",
    "metadata": {},
    "outputs": [],
@@ -356,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 133,
    "id": "8be53c52",
    "metadata": {},
    "outputs": [],
@@ -375,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 134,
    "id": "02505b86",
    "metadata": {},
    "outputs": [],
@@ -393,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 135,
    "id": "46b10678",
    "metadata": {},
    "outputs": [],
@@ -411,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 136,
    "id": "5625b32e",
    "metadata": {},
    "outputs": [],
@@ -429,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 137,
    "id": "a8ddc145",
    "metadata": {},
    "outputs": [],
@@ -447,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 138,
    "id": "e6ca62bb",
    "metadata": {},
    "outputs": [],
@@ -457,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 139,
    "id": "c0f922a0",
    "metadata": {},
    "outputs": [
@@ -499,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 140,
    "id": "0dc6c55a",
    "metadata": {},
    "outputs": [
@@ -559,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 141,
    "id": "f1eaef33",
    "metadata": {},
    "outputs": [
@@ -592,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 142,
    "id": "b99c6162",
    "metadata": {},
    "outputs": [
@@ -653,6 +646,28 @@
       "Random Forest Accuracy: 0.9419\n",
       "Decision Tree Accuracy: 0.8953\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 899:>                                                        (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best model: Random Forest with accuracy 0.9419\n",
+      "Model saved at: models/Random_Forest_model\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
@@ -671,6 +686,8 @@
     "best_model = None\n",
     "best_name = \"\"\n",
     "\n",
+    "# project directory\n",
+    "project_dir = \"/CancerAnalysis\"\n",
     "\n",
     "# Run each model and print accuracy\n",
     "for name, classifier in models:\n",
@@ -685,9 +702,14 @@
     "        best_accuracy = accuracy\n",
     "        best_model = model\n",
     "        best_name = name\n",
+    "\n",
+    "# construct full path to save the movel\n",
+    "\n",
+    "save_dir = os.path.join(project_dir,\"models\")\n",
+    "os.makedirs(save_dir, exist_ok=True)\n",
     "    \n",
     "# Save the best model to disk\n",
-    "model_path = f\"models/{best_name.replace(' ', '_')}_model\"\n",
+    "model_path = os.path.join(save_dir, f\"{best_name.replace(' ', '_')}_model\")\n",
     "best_model.write().overwrite().save(model_path)\n",
     "\n",
     "\n",
