save model code refactor

--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -644,29 +644,9 @@
      "text": [
       "Logistic Regression Accuracy: 0.9302\n",
       "Random Forest Accuracy: 0.9419\n",
-      "Decision Tree Accuracy: 0.8953\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 899:>                                                        (0 + 1) / 1]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Decision Tree Accuracy: 0.8953\n",
       "Best model: Random Forest with accuracy 0.9419\n",
-      "Model saved at: models/Random_Forest_model\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
+      "Model saved at: CancerAnalysis/models/Random_Forest_model\n"
      ]
     }
    ],
@@ -687,7 +667,9 @@
     "best_name = \"\"\n",
     "\n",
     "# project directory\n",
-    "project_dir = \"/CancerAnalysis\"\n",
+    "cwd = os.getcwd()\n",
+    "project_dir = os.path.abspath(os.path.join(cwd, \"..\"))\n",
+    "\n",
     "\n",
     "# Run each model and print accuracy\n",
     "for name, classifier in models:\n",
