use saved model in production

--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 147,
    "id": "8be53c52",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 148,
    "id": "02505b86",
    "metadata": {},
    "outputs": [],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 149,
    "id": "46b10678",
    "metadata": {},
    "outputs": [],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 150,
    "id": "5625b32e",
    "metadata": {},
    "outputs": [],
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 151,
    "id": "a8ddc145",
    "metadata": {},
    "outputs": [],
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 152,
    "id": "e6ca62bb",
    "metadata": {},
    "outputs": [],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 153,
    "id": "c0f922a0",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 154,
    "id": "0dc6c55a",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 155,
    "id": "f1eaef33",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 156,
    "id": "b99c6162",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "id": "87060e5d",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
       "Random Forest Accuracy: 0.9419\n",
       "Decision Tree Accuracy: 0.8953\n",
       "Best model: Random Forest with accuracy 0.9419\n",
-      "Model saved at: CancerAnalysis/models/Random_Forest_model\n"
+      "Model saved at: /home/realelvo/Desktop/Projects/CancerAnalysis/models/Random_Forest_model\n"
      ]
     }
    ],
@@ -697,6 +697,119 @@
     "\n",
     "print(f\"Best model: {best_name} with accuracy {best_accuracy:.4f}\")\n",
     "print(f\"Model saved at: {model_path}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9dbd7f1",
+   "metadata": {},
+   "source": [
+    "### use a new dataset in production"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "8b8f8079",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    (8524563,\"M\",14.58,21.53,97.41,644.8,0.1054,0.1868,0.1425,0.08783,0.2252,0.06924,0.2545,0.9832,2.11,21.05,0.004452,0.03055,0.02681,0.01352,0.01454,0.003711,17.62,33.21,122.4,896.9,0.1525,0.6643,0.5539,0.2701,0.4264,0.1275)\n",
+    "]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "5de6a24f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+---------+-----------+------------+--------------+---------+---------------+----------------+--------------+-------------------+-------------+----------------------+---------+----------+------------+-------+-------------+--------------+------------+-----------------+-----------+--------------------+------------+-------------+---------------+----------+----------------+-----------------+---------------+--------------------+--------------+-----------------------+\n",
+      "|id     |diagnosis|radius_mean|texture_mean|perimeter_mean|area_mean|smoothness_mean|compactness_mean|concavity_mean|concave_points_mean|symmetry_mean|fractal_dimension_mean|radius_se|texture_se|perimeter_se|area_se|smoothness_se|compactness_se|concavity_se|concave_points_se|symmetry_se|fractal_dimension_se|radius_worst|texture_worst|perimeter_worst|area_worst|smoothness_worst|compactness_worst|concavity_worst|concave_points_worst|symmetry_worst|fractal_dimension_worst|\n",
+      "+-------+---------+-----------+------------+--------------+---------+---------------+----------------+--------------+-------------------+-------------+----------------------+---------+----------+------------+-------+-------------+--------------+------------+-----------------+-----------+--------------------+------------+-------------+---------------+----------+----------------+-----------------+---------------+--------------------+--------------+-----------------------+\n",
+      "|8524563|M        |14.58      |21.53       |97.41         |644.8    |0.1054         |0.1868          |0.1425        |0.08783            |0.2252       |0.06924               |0.2545   |0.9832    |2.11        |21.05  |0.004452     |0.03055       |0.02681     |0.01352          |0.01454    |0.003711            |17.62       |33.21        |122.4          |896.9     |0.1525          |0.6643           |0.5539         |0.2701              |0.4264        |0.1275                 |\n",
+      "+-------+---------+-----------+------------+--------------+---------+---------------+----------------+--------------+-------------------+-------------+----------------------+---------+----------+------------+-------+-------------+--------------+------------+-----------------+-----------+--------------------+------------+-------------+---------------+----------+----------------+-----------------+---------------+--------------------+--------------+-----------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "production_cancer_df = spark.createDataFrame(data,cancer_schema)\n",
+    "\n",
+    "production_cancer_df.show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a75e2481",
+   "metadata": {},
+   "source": [
+    "### Load and use saved model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "b8377ddd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-----------------------------------------+\n",
+      "|prediction|probability                              |\n",
+      "+----------+-----------------------------------------+\n",
+      "|1.0       |[0.023979729486864932,0.9760202705131351]|\n",
+      "+----------+-----------------------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.ml.pipeline import PipelineModel\n",
+    "import os\n",
+    "\n",
+    "cwd = os.getcwd()\n",
+    "project_folder = os.path.abspath(os.path.join(cwd, \"..\"))\n",
+    "model_name = \"Random_Forest_model\"  \n",
+    "model_path = os.path.join(project_folder, \"models\", model_name)\n",
+    "\n",
+    "# Load the saved model pipeline\n",
+    "loaded_model = PipelineModel.load(model_path)\n",
+    "\n",
+    "# prediction on production_cancer_df\n",
+    "predictions = loaded_model.transform(production_cancer_df)\n",
+    "\n",
+    "# Show predictions\n",
+    "predictions.select(\"prediction\", \"probability\").show(truncate=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef6c58db",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dbf0b55",
+   "metadata": {},
+   "source": [
+    "## Interpretation:\n",
+    "### 0.024 (about 2.4%) — Probability the sample belongs to class \"B\" (Benign).\n",
+    "\n",
+    "### 0.976 (about 97.6%) — Probability the sample belongs to class \"M\" (Malignant).\n",
+    "\n",
+    "### model predicts this tumor as Malignant with 97.6% confidence, and only about 2.4% chance it's benign.\n",
+    "\n",
+    "###  Given that the true label in  production_cancer_df is \"M\", this prediction aligns well with the actual diagnosis."
    ]
   }
  ],
